# shoot-sim

./: .gitignore  CMakeLists.txt  GeneratedShooterLookup.h  README.md  ShooterLookup.csv  ShooterLookup.json
bestshootsim/: CMakeLists.txt  README.md  ShooterLookup.json
bestshootsim/src/app/: App.cpp
bestshootsim/src/gui/: Panels.h  PlotHelpers.cpp
bestshootsim/src/model/: Ballistics.cpp  Ballistics.h  Export.h  Types.h
bestshootsim/src/tools/: InspectSolve.cpp  InspectTmp.cpp
bestshootsim/src/util/: CsvUtil.h  MathUtil.h
bestshootsim/tests/: TestFramework.h  test_ballistics.cpp  test_constraints.cpp
calli/: CMakeLists.txt  README.md
calli/src/: CalibrationAggregator.cpp  CalibrationAggregator.h  CalibrationApp.cpp  CalibrationApp.h  CalibrationDataLoader.cpp  CalibrationDataLoader.h  CalibrationPlanner.cpp  CalibrationPlanner.h  CsvUtil.cpp  CsvUtil.h  Exporter.cpp  Exporter.h  MathUtil.cpp  MathUtil.h  ModelFitter.cpp  ModelFitter.h  RuntimeModel.cpp  RuntimeModel.h  SegmentAnalyzer.cpp  SegmentAnalyzer.h  TheoryDataLoader.cpp  TheoryDataLoader.h  Types.h  main.cpp
calli/tests/: TestFramework.h  TestMain.cpp  test_aggregator.cpp  test_export.cpp  test_fitter.cpp  test_planner.cpp  test_segment.cpp
src/: main.cpp
src/app/: App.cpp  App.h
src/gui/: Panels.cpp  PlotHelpers.cpp  PlotHelpers.h
src/model/: Constraints.cpp  Constraints.h  Export.cpp  Geometry.cpp  Geometry.h  Search.cpp  Search.h  Sweep.cpp  Sweep.h  Types.h
src/util/: CsvUtil.cpp  JsonUtil.cpp  JsonUtil.h  MathUtil.cpp
tests/: TestMain.cpp  test_constraints.cpp  test_search.cpp
